@@ -1,5 +1,6 @@
  * Upgrade to Android API 30 #723
  * Save new credentials with Autofill #524
+ * Setting to close database after Autofill selection #755
  * Fix biometric issues #724 #740 #731
  * Fix autofill #725 #551
  * Small fixes and translations #732 #736 #737 #738 #742
