@@ -1,5 +1,6 @@
  * Mise à jour vers Android API 30 #723
  * Sauvegarde de nouveaux identifiants avec le remplissage automatique #524
+ * Paramètre pour fermer la base de données après une sélection de remplissage automatique #755
  * Correction de problèmes biométriques #724 #740 #731
  * Correction de l'autofill #725 #551
  * Petites corrections et traductions #732 #736 #737 #738 #742
